[tool.poetry]
name = "sqlalchemy-utils"
version = "0.1.0"
description = ""
authors = ["Aleksey Dalekin <alex@nbs.vc>"]

[tool.poetry.dependencies]
python = "^3.7"
six = "^1.16.0"
SQLAlchemy = "^1.4.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
